--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "2D Tower Defense.sln"
+    "dotnet.defaultSolution": "Gimersia2025-PemudaKurangKompe-TowerDefense.sln"
 }
